# clickup-mcp-server

./: .gitignore  README.md  pyproject.toml  test_scenarios.md
src/clickup_mcp/: server.py
